--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <div class="container">
         <div class="intro">
           <a href="/grid"><h1>grid</h1></a>
-          <p>Um guia simples para design responsivo.<br>Feito por <a href="http://www.adamkaplan.me/" target="_blank">Adam Kaplan</a>. Vers&atilde;o brasileira por <a href="http://webfatorial.com/">webfatorial</a>.</p>
+          <p>Um guia simples para design responsivo.
+          <br>Feito por <a href="http://www.adamkaplan.me/" target="_blank">Adam Kaplan</a>. Vers&atilde;o brasileira por <a href="http://webfatorial.com/">webfatorial</a>.</p>
         </div>
         <img src="/images/mobile.png" alt="Intro" class="mobile animated fadeInUp">
       </div>
@@ -141,8 +142,7 @@
       <div class="container">
         <div class="circle">3</div>
         <h1>Use box-sizing: border-box</h1>
-        <p>Coloque no in&iacute;cio de seu arquivo <code>CSS</code>. O <code>*</code> 
-        vai afetar todos os elementos na p&aacute;gina.</p>
+        <p>Coloque no in&iacute;cio de seu arquivo <code>CSS</code>. O <code>*</code> vai afetar todos os elementos na p&aacute;gina.</p>
         <hr>
         <script src="https://gist.github.com/aekaplan/8247563.js"></script>
       </div>
