Ajusta referências de assets

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/grid.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/grid.css">
     <!--[if lt IE 9]>
       <script src="/js/html5shiv.js"></script>
     <![endif]-->
@@ -29,13 +29,13 @@
           <p>Um guia simples para design responsivo.
           <br>Feito por <a href="http://www.adamkaplan.me/" target="_blank">Adam Kaplan</a>. Vers&atilde;o brasileira por <a href="http://webfatorial.com/">webfatorial</a>.</p>
         </div>
-        <img src="/images/mobile.png" alt="Intro" class="mobile animated fadeInUp">
+        <img src="images/mobile.png" alt="Intro" class="mobile animated fadeInUp">
       </div>
     </header>
 
     <section>
       <div class="container">
-        <img src="/images/mobile-first.png" alt="Mobile First" class="rwd">
+        <img src="images/mobile-first.png" alt="Mobile First" class="rwd">
         <h1>Por que se importar com responsivo?</h1>
         <p>Queremos que nossos sites sejam us&aacute;veis em todos os dispositivos, respondendo ao comportamento e tamanho e orienta&ccedil;&atilde;o de tela do visitante.</p>
       </div>
@@ -66,7 +66,7 @@
 
     <section class="example quote remove-padding">
       <div class="container">
-        <img src="/images/small-large.png" alt="Mobile First">
+        <img src="images/small-large.png" alt="Mobile First">
       </div>
     </section>
 
@@ -101,7 +101,7 @@
 
     <section class="example">
       <div class="container">
-        <img src="/images/box-model.png" alt="Box Model">
+        <img src="images/box-model.png" alt="Box Model">
       </div>
     </section>
 
@@ -112,25 +112,25 @@
         <hr>
         <div class="row clearfix">
           <div class="column fourth">
-            <img src="/images/content.png" alt="content">
+            <img src="images/content.png" alt="content">
             <h3 class="content">Conte&uacute;do</h3>
             <p>O conte&uacute;do do box, onde texto e imagem aparecem.</p>
           </div>
 
           <div class="column fourth">
-            <img src="/images/padding.png" alt="padding">
+            <img src="images/padding.png" alt="padding">
             <h3 class="padding">Padding</h3>
             <p>&Aacute;rea ao redor do conte&uacute;do.</p>
           </div>
 
           <div class="column fourth">
-            <img src="/images/border.png" alt="border">
+            <img src="images/border.png" alt="border">
             <h3 class="border">Border</h3>
             <p>Borda que vai ao redor do padding.</p>
           </div>
 
           <div class="column fourth">
-            <img src="/images/margin.png" alt="margin">
+            <img src="images/margin.png" alt="margin">
             <h3 class="margin">Margin</h3>
             <p>&Aacute;rea ao redor da borda.</p>
           </div>
@@ -157,13 +157,13 @@
 
         <div class="row clearfix">
           <div class="column half">
-            <img src="/images/without-box-model.png" alt="Without Box Model">
+            <img src="images/without-box-model.png" alt="Without Box Model">
             <h3>Sem box-sizing: border-box</h3>
             <p>Margem, bordas e padding s&atilde;o desenhados fora da especifica&ccedil;&atilde;o de largura do conte&uacute;do.</p>
           </div>
 
           <div class="column half">
-            <img src="/images/with-box-model.png" alt="With Box Model">
+            <img src="images/with-box-model.png" alt="With Box Model">
             <h3>Com box-sizing: border-box</h3>
             <p>Bordas e padding s&atilde;o desenhados dentro da especifica&ccedil;&atilde;o da largura do conte&uacute;do. A margem &eacute; desenhada fora.</p>
           </div>
@@ -184,7 +184,7 @@
 
     <section class="example">
       <div class="container">
-        <img src="/images/container.png" alt="Container">
+        <img src="images/container.png" alt="Container">
       </div>
     </section>
 
